// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Spec Snapshots should render selected tab 1`] = `
.c0 {
  display: inline-block;
  flex: 1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  font-size: 14px;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
  color: #001B38;
}

.c0:hover {
  color: #001B38;
}

.c1 {
  margin-bottom: 11px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c2 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
  background: #001B38;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Example Tab
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render tab 1`] = `
.c0 {
  display: inline-block;
  flex: 1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  font-size: 14px;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
}

.c0:hover {
  color: #001B38;
}

.c1 {
  margin-bottom: 11px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c2 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Example Tab
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render tab group 1`] = `
.c0 {
  display: flex;
  flex-flow: row;
  gap: 16px;
  max-width: 100%;
}

<div>
  <div
    class="c0"
  />
</div>
`;
